// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom serialization custom state serialization on the server and deserialization on the client 1`] = `
<div>
  {"reduxStatus":"init","serialized":true,"deserialized":true}
</div>
`;

exports[`store integration async 1`] = `
<div>
  {"custom":"custom"}
  {"reduxStatus":"foo"}
</div>
`;

exports[`store integration simple 1`] = `
<div>
  {"custom":"custom"}
  {"reduxStatus":"foo"}
</div>
`;
